--- a/css/demo.css
+++ b/css/demo.css
@@ -11,14 +11,18 @@ body {
   position: relative;
   cursor: auto; }
 
-main, footer {
+main,
+footer {
   width: 100%;
   margin: 0 auto;
   max-width: 68.75rem; }
-  main:before, main:after, footer:before, footer:after {
+  main:before,
+  main:after,
+  footer:before, footer:after {
     content: " ";
     display: table; }
-  main:after, footer:after {
+  main:after,
+  footer:after {
     clear: both; }
 
 main {
@@ -34,7 +38,8 @@ footer {
   width: 100%;
   float: left; }
 
-.demo-list, .demo-list-sub {
+.demo-list,
+.demo-list-sub {
   list-style: none; }
 
 .contact-list {
@@ -52,6 +57,6 @@ p {
   font-size: 1rem;
   line-height: 1.5;
   margin-bottom: 1.25rem;
-  text-rendering: optimizeLegibility; }
+  text-rendering: auto; }
 
 /*# sourceMappingURL=demo.css.map */
